--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,5 @@
-defaultSemverRangePrefix: ''
+defaultSemverRangePrefix: ""
 
 enableGlobalCache: true
 
-yarnPath: .yarn/releases/yarn-4.3.1.cjs
+yarnPath: .yarn/releases/yarn-4.4.0.cjs
